--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -34,10 +34,7 @@
 
     <section class="header-section">
       <div>
-        <h1>Innovation<br>
-          On<br>
-          Demand
-        </h1>
+        <h1>Innovation<br>On<br>Demand</h1>
 
         <button type="button">Get Started</button>
       </div>
@@ -47,51 +44,57 @@
   </header>
 
   <div class="content">
-    <section class="top-section" id="features">
-      <h2>Features</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+    <div class="top-section-div">
+      <section class="top-section" id="features">
+        <h2>Features</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
 
-    <section class="top-section" id="about">
-      <h2>About</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+      <section class="top-section" id="about">
+        <h2>About</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
 
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-    <section class="bottom-section" id="services">
-      <h2>Services</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+    <div class="bottom-section-div">
+      <section class="bottom-section" id="services">
+        <h2>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
 
-    <section class="bottom-section" id="product">
-      <h2>Product</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+      <section class="bottom-section" id="product">
+        <h2>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
 
-    <section class="bottom-section" id="vision">
-      <h2>Vision</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      <section class="bottom-section" id="vision">
+        <h2>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
+
+    <section id="contact">
+      <address>
+        <h2>Contact</h2>
+        <p>123 Way 456 Street</p>
+        <p>Somewhere, USA</p><br>
+        <p>1 (888) 888-8888</p><br>
+        <a href="mailto:sales@greatidea.io">sales@greatidea.io</a>
+      </address>
     </section>
   </div>
 
-  <section id="contact">
-    <address>
-      <h2>Contact</h2>
-      <p>123 Way 456 Street</p>
-      <p>Somewhere, USA</p><br>
-      <p>1 (888) 888-8888</p><br>
-      <a href="mailto:sales@greatidea.io">sales@greatidea.io</a>
-    </address>
-  </section>
-
   <footer>
-    <p>Copyright Great Idea! 2018</p>
+    <div>
+      <p>Copyright Great Idea! 2018</p>
+    </div>
   </footer>
 
 </body>
