--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -44,107 +44,113 @@
     </section>
   </header>
 
-  <div class="content">
-    <section class="card">
-      <h2>Digital Design</h2>
+  <div class="services-content">
+    <div class="cards-div">
+      <section class="card">
+        <h2>Digital Design</h2>
 
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
+        <br>
+        <button type="button">Learn More</button>
+      </section>
 
-      <button type="button">Learn More</button>
-    </section>
+      <section class="card">
+        <h2>UX / UI</h2>
 
-    <section class="card">
-      <h2>UX / UI</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
+        <br>
+        <button type="button">Learn More</button>
+      </section>
 
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
+      <section class="card">
+        <h2>Digital Marketing</h2>
 
-      <button type="button">Learn More</button>
-    </section>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
+        <br>
+        <button type="button">Learn More</button>
+      </section>
 
-    <section class="card">
-      <h2>Digital Marketing</h2>
+      <section class="card">
+        <h2>Web Development</h2>
 
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
+        <br>
+        <button type="button">Learn More</button>
+      </section>
 
-      <button type="button">Learn More</button>
-    </section>
+      <section class="card">
+        <h2>iOS Development</h2>
 
-    <section class="card">
-      <h2>Web Development</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
+        <br>
+        <button type="button">Learn More</button>
+      </section>
 
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
+      <section class="card">
+        <h2>Android Development</h2>
 
-      <button type="button">Learn More</button>
-    </section>
-
-    <section class="card">
-      <h2>iOS Development</h2>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button type="button">Learn More</button>
-    </section>
-
-    <section class="card">
-      <h2>Android Development</h2>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button type="button">Learn More</button>
-    </section>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
+        <br>
+        <button type="button">Learn More</button>
+      </section>
+    </div>
 
     <section class="facts">
-      <h2>Some Facts About Our Services</h2>
+      <div class="facts-text">
+        <h2>Some Facts About Our Services</h2>
 
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <ul>
-        <li>Awesome thing</li>
-        <li>Amazing thing</li>
-        <li>Cool thing</li>
-        <li>Great thing</li>
-      </ul>
+        <ul>
+          <li>Awesome thing</li>
+          <li>Amazing thing</li>
+          <li>Cool thing</li>
+          <li>Great thing</li>
+        </ul>
+      </div>
 
       <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
     </section>
   </div>
   <footer>
-    <p>Copyright Great Idea! 2018</p>
+    <div class="services-footer-div">
+      <p>Copyright Great Idea! 2018</p>
+    </div>
   </footer>
 
 </body>
